# daily_mirror

./: .gitignore  README.md  facial_recog.code-workspace  nb.ipynb  requirements.txt
data/encodings/: 42a63ccc.npy  7f8f3e34.npy
img_server/: Cargo.toml
img_server/src/: main.rs
snapr/: .gitignore  Cargo.toml  backup mac opencv.pc  deploy.sh
snapr/.cargo/: config.toml
snapr/src/: cam.rs  main.rs
src/: cam.py  center.py  identify.py  main.py  organize.py  snap.py
src/archive/: buildEncodings.py  cam.py  headless.py  img_ops.py  organize.py
view/: package-lock.json  package.json
view/src/: App.tsx
