[package]
name = "snapr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.61"
opencv = { version = "0.66.0", default-features = false, features = ["imgcodecs", "imgproc", "videoio"] }
rppal = "0.13.1"
tokio = { version = "1.20.1", features = ["full"] }



